--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,33 +57,22 @@
 <section>
  <div class="container">
     	<div class="four columns">
-<<<<<<< HEAD
             <h7 class="match">1. Gleaners Food Bank of Indiana</h7>
             <h7 class="match">2. Early Learning Indiana</h7>
        	    <h7 class="match">3. Indianapolis Neighborhood Housing Partnership</h7>
             <h7 class="match">4. Girls Inc.</h7>
-=======
-            <img class="icon" src="images/gleaners.png" alt="Gleaners Icon">
-            <img class="icon" src="images/earlylearning.png" alt="Early Learning Icon">
-       	    <img class ="icon" src="images/inhp.png" alt="INHP Icon">
-       	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
->>>>>>> 591d63ad9a9fd79beb7ac643e7de219f1c9f8d70
     	</div>
         <div class="four columns">
-            <h3>Gleaners Food Bank of Indiana</h3>
-            <p class="imgtext">Food <br> Indianapolis, IN</p>
-            <h3>Early Learning Indiana</h3>
-            <p class="imgtext">Education <br> Indianapolis, IN</p>
-            <h3>Indianapolis Neighborhood Housing Partnership</h3>
-            <p class="imgtext">Homeless <br> Indianapolis, IN</p>
-            <h3>Other</h3>
-            <p class="imgtext">Other <br> Indianapolis, IN</p>
+            <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Education <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Homeless <br> Location: Central Indiana</p>
+            <p class="imgtext">Category: Children <br> Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
-            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
-       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
-       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">
+            <a href="https://www.gleaners.org"><button class="signup">Sign-Up</button></a>
+            <a href="https://earlylearningin.org"><button class="signup">Sign-Up</button></a>
+            <a href="https://www.inhp.org"><button class="signup">Sign-Up</button></a>
+            <a href="https://girlsincindy.org"><button class="signup">Sign-Up</button></a>
         </div>
 
     </div>
@@ -92,7 +81,6 @@
     </div>
     <div class="row">
         <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
-    </div>
     </div>
 </section>
 
