--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -45,22 +45,24 @@
         <button class="clickme1"><a href="index.html">Return Home</a></button>
     </div> 
  </nav>
+
 <!-- HEADER -->  
-  <header class="container">
+<header class="container">
     <div class="row header">
         <h2>Thank you for your interest in volunteering!</h2>
         <h4>Please explore your matches and sign up at your convenience!</h4> 
     </div>   
  </header>
 </section>
+
 <!-- NONPROFITS SECTION --> 
 <section>
  <div class="container">
     	<div class="four columns">
-            <h7 class="match">1. Gleaners Food Bank of Indiana</h7>
-            <h7 class="match">2. Early Learning Indiana</h7>
-       	    <h7 class="match">3. Indianapolis Neighborhood Housing Partnership</h7>
-            <h7 class="match">4. Girls Inc.</h7>
+            <h7 class="imgtext">1. Gleaners Food Bank of Indiana</h7>
+            <h7 class="imgtext">2. Early Learning Indiana</h7>
+       	    <h7 class="imgtext">3. Indianapolis Neighborhood Housing Partnership</h7>
+            <h7 class="imgtext">4. Girls Inc.</h7>
     	</div>
         <div class="four columns">
             <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
@@ -69,21 +71,16 @@
             <p class="imgtext">Category: Children <br> Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <a href="https://www.gleaners.org"><button class="signup">Sign-Up</button></a>
-            <a href="https://earlylearningin.org"><button class="signup">Sign-Up</button></a>
-            <a href="https://www.inhp.org"><button class="signup">Sign-Up</button></a>
-            <a href="https://girlsincindy.org"><button class="signup">Sign-Up</button></a>
+            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://girlsincindy.org">Sign-Up</a></button>
         </div>
 
     </div>
-    <div class="row">
-        <a href="volunteer.html"> <button class="clickme2">Match me with volunteer opportunities!</button> </a>
-    </div>
-    <div class="row">
-        <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
-    </div>
 </section>
 
+<!-- FOOTER --> 
 <footer>
     <div class="container">
         <div class="row footer">
