--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,7 +59,7 @@
 <section>
  <div class="container">
     	<div class="four columns">
-            <h7 class="imgtext">1. Gleaners Food Bank of Indiana</h7>
+            <p class="imgtext">1. Gleaners Food Bank of Indiana</p>
             <h7 class="imgtext">2. Early Learning Indiana</h7>
        	    <h7 class="imgtext">3. Indianapolis Neighborhood Housing Partnership</h7>
             <h7 class="imgtext">4. Girls Inc.</h7>
