--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -60,9 +60,9 @@
  <div class="container">
     	<div class="four columns">
             <p class="imgtext">1. Gleaners Food Bank of Indiana</p>
-            <h7 class="imgtext">2. Early Learning Indiana</h7>
-       	    <h7 class="imgtext">3. Indianapolis Neighborhood Housing Partnership</h7>
-            <h7 class="imgtext">4. Girls Inc.</h7>
+            <p class="imgtext">2. Early Learning Indiana</p>
+       	    <p class="imgtext">3. Indianapolis Neighborhood Housing Partnership</p>
+            <p class="imgtext">4. Girls Inc.</p>
     	</div>
         <div class="four columns">
             <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
