--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,26 +57,36 @@
 
 <!-- NONPROFITS SECTION --> 
 <section>
- <div class="container">
+    <div class="container">
     	<div class="four columns">
-            <p class="imgtext">1. Gleaners Food Bank of Indiana</p>
-            <p class="imgtext">2. Early Learning Indiana</p>
-       	    <p class="imgtext">3. Indianapolis Neighborhood Housing Partnership</p>
-            <p class="imgtext">4. Girls Inc.</p>
+            <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
+            <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
+       	    <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
+       	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
     	</div>
         <div class="four columns">
-            <p class="imgtext">Category: Food <br> Location: Central Indiana</p>
-            <p class="imgtext">Category: Education <br> Location: Central Indiana</p>
-            <p class="imgtext">Category: Homeless <br> Location: Central Indiana</p>
-            <p class="imgtext">Category: Children <br> Location: Central Indiana</p>
+            <h3>Second Helpings</h3>
+            <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
+            <h3>Horizon House</h3>
+            <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services. They provide a safe place and basic services as they take steps towards a more stable life. </p>
+            <h3>Boys and Girls Club</h3>
+            <p class="imgtext">The mission of Boys & Girls Clubs of America is to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
+            <h3>Indiana Black Expo</h3>
+            <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
         </div>
    	    <div class="four columns">
-            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button>
-            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button>
-            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button>
-            <button class="signup"><a href="https://girlsincindy.org">Sign-Up</a></button>
+            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
+            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
+       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
+       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">  
         </div>
-
+        
+    </div>
+    <div class="row">
+        <a href="volunteer.html"> <button class="clickme2">Match me with volunteer opportunities!</button> </a>
+    </div>
+    <div class="row">
+        <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
     </div>
 </section>
 
