--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -50,7 +50,7 @@
 <header class="container">
     <div class="row header">
         <h2>Thank you for your interest in volunteering!</h2>
-        <h4>Please explore your matches and sign up at your convenience!</h4> 
+        <h4>Please explore your matches and reach out at your convenience.</h4> 
     </div>   
  </header>
 </section>
