--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,26 +59,22 @@
 <section>
     <div class="container">
     	<div class="four columns">
-            <img class="icon" src="images/secondhelpings.png" alt="Second Helpings Icon">
-            <img class="icon" src="images/horizonhouse.png" alt="Horizon House Icon">
-       	    <img class ="icon" src="images/boysandgirlsclub.png" alt="Boys and Girls Club Icon">
-       	    <img class ="icon" src="images/ibe.png" alt="Indiana Black Expo Icon">
+            <h7>1. Gleaners Food Bank of America</h7>
+            <h7>2. Early Learning America</h7>
+            <h7>3. Indianapolis Neighborhood Housing Partnership</h7>
+            <h7>4. Girls, Inc.</h7>
     	</div>
         <div class="four columns">
-            <h3>Second Helpings</h3>
-            <p class="imgtext">Second Helpings has rescued over 16 million pounds of food. We have served over 6 million meals to 70 local social service agencies.</p>
-            <h3>Horizon House</h3>
-            <p class="imgtext">Horizon House connects individuals experiencing homelessness with integrated, comprehensive services. They provide a safe place and basic services as they take steps towards a more stable life. </p>
-            <h3>Boys and Girls Club</h3>
-            <p class="imgtext">The mission of Boys & Girls Clubs of America is to inspire and enable all young people, especially those from disadvantaged circumstances, to realize their full potential as productive, responsible citizens.</p>
-            <h3>Indiana Black Expo</h3>
-            <p class="imgtext">Indiana Black Expo aims to educate the public as to the economic, educational, political, religious, and social achievements and cultural development of African-Americans.</p>
+            <p>Category: Food <br>Location: Central Indiana</p>
+            <p>Category: Education <br>Location: Central Indiana</p>
+            <p>Category: Homeless <br>Location: Central Indiana</p>
+            <p>Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <img class="icon2" src="images/foodpile.png" alt="Second Helpings Icon">
-            <img class="icon2" src="images/services.png" alt="Horizon House Icon">
-       	    <img class ="icon2" src="images/youth.png" alt="Boys and Girls Club Icon">
-       	    <img class ="icon2" src="images/money.png" alt="Indiana Black Expo Icon">  
+            <button><a href="https://www.gleaners.org">Sign-Up</a></button>
+            <button><a href="https://earlylearningin.org">Sign-Up</a></button>
+            <button><a href="https://www.inhp.org">Sign-Up</a></button>
+            <button><a href="https://girlsincindy.org">Sign-Up</a></button>
         </div>
         
     </div>
