--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -58,7 +58,7 @@
 <!-- QUESTIONNAIRE SECTION --> 
 <section>
     <div class="container">
-        <form action="nonprofit-confirmation" name="Nonprofit Questionnaire" method="post">
+        <form action="nonprofit-submit.html" name="Nonprofit Questionnaire" method="post">
 
         Name of Nonprofit: <input type="text" name="Name"><br>
             
