--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,9 +59,9 @@
 <section>
     <div class="container">
     	<div class="four columns">
-            <h7>1. Gleaners Food Bank of America</h7>
-            <h7>2. Early Learning America</h7>
-            <h7>3. Indianapolis Neighborhood Housing Partnership</h7>
+            <h7>1. Gleaners Food Bank of America</h7><br>
+            <h7>2. Early Learning America</h7><br>
+            <h7>3. Indianapolis Neighborhood Housing Partnership</h7><br>
             <h7>4. Girls, Inc.</h7>
     	</div>
         <div class="four columns">
@@ -71,18 +71,11 @@
             <p>Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <button><a href="https://www.gleaners.org">Sign-Up</a></button>
-            <button><a href="https://earlylearningin.org">Sign-Up</a></button>
-            <button><a href="https://www.inhp.org">Sign-Up</a></button>
-            <button><a href="https://girlsincindy.org">Sign-Up</a></button>
-        </div>
-        
-    </div>
-    <div class="row">
-        <a href="volunteer.html"> <button class="clickme2">Match me with volunteer opportunities!</button> </a>
-    </div>
-    <div class="row">
-        <a href="nonprofit.html"> <button class="clickme3">Are you a nonprofit? Register here.</button> </a>
+            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://girlsincindy.org">Sign-Up</a></button>
+        </div> 
     </div>
 </section>
 
