--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -65,15 +65,15 @@
             <h7>4. Girls, Inc.</h7>
     	</div>
         <div class="four columns">
-            <p>Category: Food <br>Location: Central Indiana</p>
-            <p>Category: Education <br>Location: Central Indiana</p>
-            <p>Category: Homeless <br>Location: Central Indiana</p>
-            <p>Category: Children <br>Location: Central Indiana</p>
+            <p class="info">Category: Food <br>Location: Central Indiana</p>
+            <p class="info">Category: Education <br>Location: Central Indiana</p>
+            <p class="info">Category: Homeless <br>Location: Central Indiana</p>
+            <p class="info">Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button>
-            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button>
-            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button>
+            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button><br>
+            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button><br>
+            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button><br>
             <button class="signup"><a href="https://girlsincindy.org">Sign-Up</a></button>
         </div> 
     </div>
