I feel confident this might work

--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,10 +59,10 @@
 <section>
     <div class="container">
     	<div class="four columns">
-            <h7>1. Gleaners Food Bank of America</h7><br>
-            <h7>2. Early Learning America</h7><br>
-            <h7>3. Indianapolis Neighborhood Housing Partnership</h7><br>
-            <h7>4. Girls, Inc.</h7>
+            <p class="title">1. Gleaners Food Bank of America</p>
+            <p class="title">2. Early Learning America</p>
+            <p class="title">3. Indianapolis Neighborhood Housing Partnership</p>
+            <p class="title">4. Girls, Inc.</p>
     	</div>
         <div class="four columns">
             <p class="info">Category: Food <br>Location: Central Indiana</p>
