lets see if it works

--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -71,10 +71,10 @@
             <p class="info">Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <button class="signup"><a href="https://www.gleaners.org">Sign-Up</a></button><br>
-            <button class="signup"><a href="https://earlylearningin.org">Sign-Up</a></button><br>
-            <button class="signup"><a href="https://www.inhp.org">Sign-Up</a></button><br>
-            <button class="signup"><a href="https://girlsincindy.org">Sign-Up</a></button>
+            <p class="info"><a href="https://www.gleaners.org">Website</a> <br>Phone: 317-925-0191</p>
+            <p class="info"><a href="https://earlylearningin.org">Website</a> <br>Phone: 317-636-9197</p>
+            <p class="info"><a href="https://www.inhp.org">Website</a> <br>Phone: 317-610-4663</p>
+            <p class="info"><a href="https://girlsincindy.org">Website</a> <br>Phone: 317-283-0086</p>
         </div> 
     </div>
 </section>
