--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -50,7 +50,7 @@
 <header class="container">
     <div class="row header">
         <h2>Thank you for your interest in volunteering!</h2>
-        <h4>Please explore your matches and reach out at your convenience.</h4> 
+        <h6>Please explore your matches and reach out at your convenience.</h6> 
     </div>   
  </header>
 </section>
@@ -71,10 +71,10 @@
             <p class="info">Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <a class="info" href="https://www.gleaners.org">Website</a> <br><p>Phone: 317-925-0191</p>
-            <a class="info" href="https://earlylearningin.org">Website</a> <br><p>Phone: 317-636-9197</p>
-            <a class="info" href="https://www.inhp.org">Website</a> <br><p>Phone: 317-610-4663</p>
-            <a class="info" href="https://girlsincindy.org">Website</a> <br><p>Phone: 317-283-0086</p>
+            <a class="info2" href="https://www.gleaners.org">Website</a> <br><p>Phone: 317-925-0191</p>
+            <a class="info2" href="https://earlylearningin.org">Website</a> <br><p>Phone: 317-636-9197</p>
+            <a class="info2" href="https://www.inhp.org">Website</a> <br><p>Phone: 317-610-4663</p>
+            <a class="info2" href="https://girlsincindy.org">Website</a> <br><p>Phone: 317-283-0086</p>
         </div> 
     </div>
 </section>
