--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -71,10 +71,10 @@
             <p class="info">Category: Children <br>Location: Central Indiana</p>
         </div>
    	    <div class="four columns">
-            <a class="info2" href="https://www.gleaners.org">Website</a> <br><p>Phone: 317-925-0191</p>
-            <a class="info2" href="https://earlylearningin.org">Website</a> <br><p>Phone: 317-636-9197</p>
-            <a class="info2" href="https://www.inhp.org">Website</a> <br><p>Phone: 317-610-4663</p>
-            <a class="info2" href="https://girlsincindy.org">Website</a> <br><p>Phone: 317-283-0086</p>
+            <p>Website: <a class="info2" href="https://www.gleaners.org">https://www.gleaners.org</a> <br>Phone: 317-925-0191</p>
+            <p>Website: <a class="info2" href="https://earlylearningin.org">https://earlylearningin.org</a> <br>Phone: 317-925-0191</p>
+            <p>Website: <a class="info2" href="https://www.inhp.org">https://www.inhp.org</a> <br>Phone: 317-925-0191</p>
+            <p>Website: <a class="info2" href="https://girlsincindy.org">https://girlsincindy.org</a> <br>Phone: 317-925-0191</p>
         </div> 
     </div>
 </section>
