Successfully saved to repository

--- a/src/main/webapp/nonprofit.html
+++ b/src/main/webapp/nonprofit.html
@@ -60,12 +60,12 @@
     <div class="container">
         <form action="nonprofit-submit.html" name="Nonprofit Questionnaire" method="post">
 
-        Name of Nonprofit: <input type="text" name="Name"><br>
+        Name of Nonprofit: <input type="text" name="name"><br>
             
         <br>Contact Info<br>
-        <br>Website: <input type="text" name="Website">
-        <br>Phone: <input type="text" name="Phone">
-        <br>Email: <input type="text" name="Email"><br>
+        <br>Website: <input type="text" name="website">
+        <br>Phone: <input type="text" name="phone">
+        <br>Email: <input type="text" name="email"><br>
             
         <br>What is your organization in need of? (Select all that apply.)<br>
         <br>
