Morning-mostly works

--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,22 +59,22 @@
 <section>
     <div class="container">
     	<div class="four columns">
-            <p class="title">1. Gleaners Food Bank of America</p>
-            <p class="title">2. Early Learning America</p>
-            <p class="title">3. Indianapolis Neighborhood Housing Partnership</p>
-            <p class="title">4. Girls, Inc.</p>
+            <p class="title">1. [name1]</p>
+            <p class="title">2. [name2]</p>
+            <p class="title">3. [name3]</p>
+            <p class="title">4. [name4]</p>
     	</div>
         <div class="four columns">
-            <p class="info">Category: Food <br>Location: Central Indiana</p>
-            <p class="info">Category: Education <br>Location: Central Indiana</p>
-            <p class="info">Category: Homeless <br>Location: Central Indiana</p>
-            <p class="info">Category: Children <br>Location: Central Indiana</p>
+            <p class="info">Category: [activities1] <br>Location: [location1] Indiana</p>
+            <p class="info">Category: [activities2] <br>Location: [location2] Indiana</p>
+            <p class="info">Category: [activities3] <br>Location: [location3] Indiana</p>
+            <p class="info">Category: [activities4] <br>Location: [location4] Indiana</p>
         </div>
    	    <div class="four columns">
-            <p class="info">Website: <a class="info2" href="https://www.gleaners.org">https://www.gleaners.org</a> <br>Phone: 317-925-0191</p>
-            <p class="info">Website: <a class="info2" href="https://earlylearningin.org">https://earlylearningin.org</a> <br>Phone: 317-636-9197</p>
-            <p class="info">Website: <a class="info2" href="https://www.inhp.org">https://www.inhp.org</a> <br>Phone: 317-610-4663</p>
-            <p class="info">Website: <a class="info2" href="https://girlsincindy.org">https://girlsincindy.org</a> <br>Phone: 317-283-0086</p>
+            <p class="info">Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1]</p>
+            <p class="info">Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2]</p>
+            <p class="info">Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3]</p>
+            <p class="info">Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4]</p>
         </div> 
     </div>
 </section>
