--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -77,7 +77,7 @@
             <p class="info">Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4]</p>
         </div> 
         <div class="three columns">
-        	<a href="volunteer.html"> <button class="clickme2" align=left >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme2" position=left >Donate</button> </a>
         	 	<a href="volunteer.html"> <button class="clickme2">Donate</button> </a>
         	 	 	<a href="volunteer.html"> <button class="clickme2">Donate</button> </a>
         	 	 	 	<a href="volunteer.html"> <button class="clickme2">Donate</button> </a>
