nonprofit sub bigger

--- a/src/main/webapp/nonprofit-submit.html
+++ b/src/main/webapp/nonprofit-submit.html
@@ -50,7 +50,7 @@
   <header class="container">
     <div class="row header">
         <h2>Thank you!</h2>
-        <h6>Your information was submitted successfully. <br>
+        <h6 class="bigger">Your information was submitted successfully. <br>
         You will be hearing from us shortly in your email inbox.</h6> 
     </div>   
  </header>
