--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -58,29 +58,29 @@
 <!-- NONPROFITS SECTION --> 
 <section>
 	<div class="container">
-    	<div class="four columns">
+    	<div class="three columns">
             <p class="title">1. [name1]</p>
             <p class="title">2. [name2]</p>
             <p class="title">3. [name3]</p>
             <p class="title">4. [name4]</p>
     	</div>
-        <div class="four columns">
+        <div class="three columns">
             <p class="info">Category: [activities1] <br>Location: [location1] Indiana</p>
             <p class="info">Category: [activities2] <br>Location: [location2] Indiana</p>
             <p class="info">Category: [activities3] <br>Location: [location3] Indiana</p>
             <p class="info">Category: [activities4] <br>Location: [location4] Indiana</p>
         </div>
-   	    <div class="two columns">
+   	    <div class="three columns">
             <p class="info">Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1]</p>
             <p class="info">Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2]</p>
             <p class="info">Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3]</p>
             <p class="info">Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4]</p>
         </div> 
-        <div class="two columns">
-        	<a href="volunteer.html"> <button class="donate" >Donate</button> </a>
-        	 	<a href="volunteer.html"> <button class="donate">Donate</button> </a>
-        	 	 	<a href="volunteer.html"> <button class="donate">Donate</button> </a>
-        	 	 	 	<a href="volunteer.html"> <button class="donate">Donate</button> </a>
+        <div class="three columns">
+        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
+        	 	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
+        	 	 	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
         </div>
     </div>
 </section>
