--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -78,9 +78,13 @@
         </div> 
         <div class="three columns">
         	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
-        	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
-        	 	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
-        	 	 	 	<a href="volunteer.html"> <button class="clickme4">Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
         </div>
     </div>
 </section>
