--- a/src/main/webapp/nonprofit-submit.html
+++ b/src/main/webapp/nonprofit-submit.html
@@ -49,10 +49,12 @@
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
+    <div class="bigbody">
         <h2>Thank you!</h2>
-        <h7>Your information was submitted successfully. <br>
-        You will be hearing from us shortly in your email inbox.</h7> 
-    </div>   
+        <h6>Your information was submitted successfully. <br>
+        You will be hearing from us shortly in your email inbox.</h6> 
+    </div>
+    </div>
  </header>
 </section>
     
