--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,36 +57,36 @@
 
 <!-- NONPROFITS SECTION --> 
 <section>
-	<div class="container">
-    	<div class="three columns">
-            <p class="title">1. [name1]</p>
-            <p class="title">2. [name2]</p>
-            <p class="title">3. [name3]</p>
-            <p class="title">4. [name4]</p>
-    	</div>
-        <div class="three columns">
-            <p class="info">Category: [activities1] <br>Location: [location1] Indiana</p>
-            <p class="info">Category: [activities2] <br>Location: [location2] Indiana</p>
-            <p class="info">Category: [activities3] <br>Location: [location3] Indiana</p>
-            <p class="info">Category: [activities4] <br>Location: [location4] Indiana</p>
-        </div>
-   	    <div class="three columns">
-            <p class="info">Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1]</p>
-            <p class="info">Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2]</p>
-            <p class="info">Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3]</p>
-            <p class="info">Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4]</p>
-        </div> 
-        <div class="three columns">
-        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
-        	<a href="volunteer.html"> <button class="clickme4" >Sign Up!</button> </a>
-        </div>
-    </div>
+	<table>
+		<tr>
+			<td> 1. [name1] </td>
+			<td> Category: [activities1] <br>Location: [location1] Indiana </td>
+			<td> Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1] </td>
+			<td> <a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a> </td>
+		</tr>	
+		<tr>
+			<td> 2. [name2] </td>
+			<td> Category: [activities2] <br>Location: [location2] Indiana</td>
+			<td> Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2] </td>
+			<td> <a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a> </td>
+		</tr>	
+		<tr>
+			<td> 3. [name3] </td>
+			<td> Category: [activities3] <br>Location: [location3] Indiana</td>
+			<td> Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3] </td>
+			<td> <a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a> </td>
+		</tr>	
+		<tr>
+			<td> 4. [name4] </td>
+			<td> Category: [activities4] <br>Location: [location4] Indiana</td>
+			<td> Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4] </td>
+			<td> <a href="volunteer.html"> <button class="clickme4" >Donate</button> </a>
+        	<a href="volunteer.html"> <button class="clickme4" > Sign Up!</button> </a></td>
+		</tr>		
+	</table>
 </section>
 
 <!-- FOOTER --> 
