--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -59,28 +59,28 @@
 <section>
 	<table>
 		<tr>
-			<td> 1. [name1] </td>
+			<th> 1. [name1] </th>
 			<td> Category: [activities1] <br>Location: [location1] Indiana </td>
 			<td> Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1] </td>
 			<td> <a href="[website1]"> <button class="clickme4" >Donate</button> </a>
         	<a href="[website1]"> <button class="clickme4" > Sign Up!</button> </a> </td>
 		</tr>	
 		<tr>
-			<td> 2. [name2] </td>
+			<th> 2. [name2] </th>
 			<td> Category: [activities2] <br>Location: [location2] Indiana</td>
 			<td> Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2] </td>
 			<td> <a href="[website2]"> <button class="clickme4" >Donate</button> </a>
         	<a href="[website2]"> <button class="clickme4" > Sign Up!</button> </a> </td>
 		</tr>	
 		<tr>
-			<td> 3. [name3] </td>
+			<th> 3. [name3] </th>
 			<td> Category: [activities3] <br>Location: [location3] Indiana</td>
 			<td> Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3] </td>
 			<td> <a href="[website3]"> <button class="clickme4" >Donate</button> </a>
         	<a href="[website3]"> <button class="clickme4" > Sign Up!</button> </a> </td>
 		</tr>	
 		<tr>
-			<td> 4. [name4] </td>
+			<th> 4. [name4] </th>
 			<td> Category: [activities4] <br>Location: [location4] Indiana</td>
 			<td> Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4] </td>
 			<td> <a href="[website4]"> <button class="clickme4" >Donate</button> </a>
