--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,6 +57,7 @@
 
 <!-- NONPROFITS SECTION --> 
 <section>
+	<div class="table">
 	<table>
 		<tr>
 			<th> 1. [name1] </th>
@@ -87,6 +88,7 @@
         	<a href="[website4]"> <button class="clickme4" > Sign Up!</button> </a></td>
 		</tr>		
 	</table>
+	</div>
 </section>
 
 <!-- FOOTER --> 
