--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,7 +57,7 @@
 
 <!-- NONPROFITS SECTION --> 
 <section>
-	<div class="table">
+	<div class=".table">
 	<table>
 		<tr>
 			<th> 1. [name1] </th>
