--- a/src/main/webapp/volunteer-submit.html
+++ b/src/main/webapp/volunteer-submit.html
@@ -57,8 +57,7 @@
 
 <!-- NONPROFITS SECTION --> 
 <section>
-	<div class=".table">
-	<table>
+	<table class ="table">
 		<tr>
 			<th> 1. [name1] </th>
 			<td> Category: [activities1] <br>Location: [location1] Indiana </td>
@@ -88,7 +87,6 @@
         	<a href="[website4]"> <button class="clickme4" > Sign Up!</button> </a></td>
 		</tr>		
 	</table>
-	</div>
 </section>
 
 <!-- FOOTER --> 
