--- a/src/main/webapp/nonprofit-submit-failure.html
+++ b/src/main/webapp/nonprofit-submit-failure.html
@@ -49,6 +49,7 @@
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
+    <div class="bigbody">
         <h2>Whoops!</h2>
         <h6>Your information was NOT submitted successfully.</h6> 
     </div>
@@ -69,6 +70,7 @@
                 <h1>Benefit Indiana</h1>
             </div>
             <h5>Created for TechPoint S.O.S. Challenge</h5>
+        </div>
         </div>
     </div>
 </footer>
