--- a/src/main/webapp/nonprofit-submit-error.html
+++ b/src/main/webapp/nonprofit-submit-error.html
@@ -49,6 +49,7 @@
 <!-- HEADER -->  
   <header class="container">
     <div class="row header">
+    <div class="bigbody">
         <h2>Error!</h2>
         <h6>Your information was NOT submitted successfully.</h6> 
     </div>
@@ -70,6 +71,7 @@
             </div>
             <h5>Created for TechPoint S.O.S. Challenge</h5>
         </div>
+    </div>
     </div>
 </footer>
 
